using java 8 compatible IOutils